--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   publish = "public"
 
 [build.environment]
-  HUGO_VERSION = "0.140.0"
+  HUGO_VERSION = "0.140.0+extended"
   HNODE_VERSION = "16"  
   HUGO_ENABLEGITINFO = "true"
  
