--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
   HUGO_VERSION = "0.140.0"
   HNODE_VERSION = "16"  
   HUGO_ENABLEGITINFO = "true"
+  HUGO_EXTENDED = "true"
  
 
 [context.production.environment]
