--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,8 +5,8 @@
 
 # Appearance
 appearance:
-  mode: system
-  color: emerald
+  mode: light
+  color: blue
 
 # SEO
 marketing:
@@ -59,6 +59,9 @@ footer:
 locale:
   date_format: 'Dec 31, 2024'
   time_format: '1:44 AM'
+params:
+  dateFormat: "Jan 2, 2006"
+
 
 # Site features:
   math:  
